cmake_minimum_required(VERSION 3.12)
project(scenes)

if(NOT COPPELIASIM_INCLUDE_DIR)
    if(DEFINED ENV{COPPELIASIM_ROOT_DIR})
        set(COPPELIASIM_INCLUDE_DIR $ENV{COPPELIASIM_ROOT_DIR}/programming/include)
    else()
        set(COPPELIASIM_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../include)
    endif()
endif()
list(APPEND CMAKE_MODULE_PATH ${COPPELIASIM_INCLUDE_DIR}/cmake)
find_package(CoppeliaSim 4.5.0.7 REQUIRED)

file(GLOB SCENE_FILES CONFIGURE_DEPENDS *.ttt)
foreach(SCENE_FILE IN LISTS SCENE_FILES)
    coppeliasim_add_scene(${SCENE_FILE})
endforeach()
coppeliasim_add_scene_directory("controlTypeExamples")
coppeliasim_add_scene_directory("kinematics")
coppeliasim_add_scene_directory("messaging")
coppeliasim_add_scene_directory("mujoco")
coppeliasim_add_scene_directory("otherScenes")
coppeliasim_add_scene_directory("pathPlanning")
coppeliasim_add_scene_directory("trajectoryAndMotion")
coppeliasim_add_scene_directory("tutorials")
coppeliasim_add_scene_directory("vision")
